Start supporting the LabsLand AI Assistant

--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>RELIA SDR Remote Lab</title>
+    <script src="https://static-apps.labsland.com/ai/ll-widgets-ng-dist-elements/2024.09.1/ll-widgets-ng-dist-elements/polyfills.js"></script>
+    <script src="https://static-apps.labsland.com/ai/ll-widgets-ng-dist-elements/2024.09.1/ll-widgets-ng-dist-elements/main.js"></script>
 <!--    <script src="https://www.gstatic.com/charts/loader.js"></script>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="conversation-container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
